--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
    <header>
    
     <header>
-        <img src="img/logo copia.png" alt="logo boolean">
-        <h1>Toboolist</h1>
+        <div id="container-header">
+            <img src="img/logo copia.png" alt="logo boolean">
+            <h1>Toboolist</h1>
+        </div>
     </header>
    
     <div id="container">
